# School_public

Algo/Projekt 1/: CMakeLists.txt  main.cpp  priority_queue.cpp  priority_queue.h
Algo/Projekt 2/: CMakeLists.txt  bucketsort.cpp  bucketsort.h  main.cpp  mergesort.cpp  mergesort.h  movie.h  quicksort.cpp  quicksort.h  readFile.cpp  readFile.h  tests.cpp  tests.h
Arduino/: 3.txt  4.1.txt  4.2.txt  5.1.txt  5.2.txt  5.3.txt  6.1.txt
Arduino/lab2/: 4.2.txt
Arduino/lab4/1/LCD_I2C/: LCD_I2C.ino
Arduino/lab4/2/LCD_I2C/: LCD_I2C.ino
Arduino/lab4/3/LCD_I2C/: LCD_I2C.ino
Arduino/lab4/4/LCD_I2C/: LCD_I2C.ino
Arduino/lab4/5/LCD_I2C/: LCD_I2C.ino
Arduino/lab5/: 1.txt  2.txt  3.txt  4.txt
SD/Projekt_1/: CMakeLists.txt  dynamic_array.cpp  dynamic_array.h  linked_list.cpp  linked_list.h  main.cpp  test_dynamic_array.cpp  test_dynamic_array.h  test_linked_list.cpp  test_linked_list.h
SD/Projekt_2/: CMakeLists.txt  heap_tests.cpp  heap_tests.h  list_tests.cpp  list_tests.h  main.cpp  priority_queue_heap.cpp  priority_queue_heap.h  priority_queue_linked_list.cpp  priority_queue_linked_list.h
SO/: philosophers.c
SiOC/: lab1_rolling_shutter.py
SiOC/lab2_image_scaling/: image_scaling.py  interpolation_1d.py  kernels.py
SiOC/lab3_demosaicing/: main.py  mosaicing.py
SiOC/lab4_denoising/: main.py
TR/Projekt 1/: Projekt1.py  xdd.py
TR/Projekt 3/: main.py
TR/Projekt2/: main.py
